# musicMan

./: CMakeLists.txt  main.c  setup
include/: test.h
src/: CMakeLists.txt  test.c
